# memory-mcp

./: .env.example  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: IMPLEMENTATION_STATUS.md  ROADMAP.md  index.html  llms.txt
evaluation_scenarios/: core.json
migrations/: 002_security_retention.sql  003_deployment_history.sql
persistent_memory_mcp/: __init__.py  cli.py  client_installer.py  code_intelligence.py  context_engine.py  dashboard.py  deployment_risk.py  deployment_storage.py  duplicate_intelligence.py  embedding_index.py  embedding_lifecycle.py  evaluation.py  evaluation_integration.py  evaluation_regression.py  git_verification.py  hybrid_search.py  isolation.py  memory_quality.py  project_guardrails.py  retention.py  runtime.py  security.py  security_integration.py  server_integration.py  session_lifecycle.py  sqlite_schema.sql  storage.py
src/: optimizer.py
src/utils/: db.py
tests/: test_backend_selection.py  test_cli.py  test_client_installer.py  test_code_intelligence.py  test_context_engine.py  test_dashboard.py  test_deployment_risk.py  test_deployment_storage.py  test_duplicate_intelligence.py  test_embedding_index.py  test_embedding_lifecycle.py  test_evaluation.py  test_evaluation_integration.py  test_evaluation_regression.py  test_git_verification.py  test_hybrid_search.py  test_isolation_retention.py  test_memory_quality.py  test_optimizer.py  test_project_guardrails.py  test_security.py  test_security_integration.py  test_server_integration.py  test_session_lifecycle.py  test_storage.py
