[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persistent-memory-mcp"
version = "0.2.0"
description = "Persistent, cross-client project memory for AI coding agents and MCP-compatible tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Danny Maaz" }]
keywords = [
  "persistent memory MCP",
  "MCP server",
  "AI agent memory",
  "AI coding assistant memory",
  "Claude Code memory",
  "Codex memory",
  "OpenCode memory",
  "Supabase MCP",
  "project context",
  "Model Context Protocol"
]
dependencies = [
  "mcp>=0.1.0",
  "supabase>=2.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "psycopg2-binary>=2.9.0"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Version Control :: Git"
]

[project.urls]
Homepage = "https://dannymaaz.github.io/memory-mcp/"
Documentation = "https://dannymaaz.github.io/memory-mcp/"
Repository = "https://github.com/dannymaaz/memory-mcp"
Issues = "https://github.com/dannymaaz/memory-mcp/issues"

[project.scripts]
memory-mcp = "persistent_memory_mcp.cli:main"
persistent-memory-mcp = "persistent_memory_mcp.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src", "src.*", "persistent_memory_mcp", "persistent_memory_mcp.*"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
